networking/ingress-controller.yaml
# Deployment of a custom controller (using nginx) for our ingress

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: nginx-ingress
          image: nginx/nginx-ingress:edge-alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "100Mi"
              cpu: "400m"
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  type: NodePort
  selector:
    app: myapp
    name: nginx-ingress
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
